# DkVerwaltungQt

./: .gitattributes  .gitignore  CMakeLists.txt  CreateDkVerwaltungQt.sql  CreateDkVerwaltungQtEmpty.sql  DK-Verwaltung.csv  Dk-Kontoauszüge.odt  DkVerwaltungQt.code-workspace  DkVerwaltungQt.desktop  DkVerwaltungQt.odt  DkVerwaltungQt.pro  DkVerwaltungQt.sln  DkVerwaltungQt.vcxproj  DkverwaltungQt.desktop.appdata.xml  Empty-DKV2-Datenbank.dkdb  Jahreskontoauszug.html  Module1.xba  README.md  Test_Tage360.ods  UpdateDkVerwaltungQt.sql  Vorlage Anschreiben Anfrage DK-Verlängerung.ott  Vorlage_Anschreiben_DK-Eingang.odt  Vorlage_Anschreiben_DK-Eingang.ott  Zinsbescheinigung.html  anonymizeDKV2DB.py  anonymizeDkVerwaltungCsv.py  anonymizeDkVerwaltungQt.py  ansparrechner.cpp  ansparrechner.h  appconfiguration.cpp  appconfiguration.h  buchungform.cpp  buchungform.h  compareDkBuchungen.py  compareDkVerwaltungQtWithDKV2.py  compareDkVerwaltungQtYears.py  compareWithDKV2.py  compareWithDKV2V2.py  dbfkts.cpp  dbfkts.h  (+34 more)
.devcontainer/: Dockerfile  devcontainer.json
DkVerwaltungQt/: DkVerwaltungQt-OO-Macros.txt  DkVerwaltungQtExtension.oxt  Module1.xba  dialog.xlb  script.xlb
docker/: DockerfileQtGui
guac-gui/: Dockerfile  DockerfileDev
guac-gui/root/etc/cont-init.d/: 50-config
guac-gui/root/etc/services.d/DkVerwaltungQt/: run
